--- a/Problema1Ideas.ipynb
+++ b/Problema1Ideas.ipynb
@@ -173,7 +173,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel('data/muestra.xlsx')\n",
+    "df = pd.read_excel('data/muestras_clean.xlsx')\n",
     "df[\"FechaID\"] = df[\"FechaID\"].astype(str).str.zfill(8)\n",
     "df[\"TurnoHoraInicio\"] = df[\"TurnoHoraInicio\"].astype(str)\n",
     "df[\"FechaHoraLLegada\"] = pd.to_datetime(df[\"FechaID\"] + \" \" + df[\"TurnoHoraInicio\"], format=\"%Y%m%d %H:%M:%S\")\n",
@@ -502,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulacion_pacientes(sucursal, df):\n",
+    "def simulacion_pacientes(sucursal, df,fechabase):\n",
     "    df_sucursal = df[df[\"Sucursal\"] == sucursal].copy()\n",
     "\n",
     "    # Calcular llegadas promedio por hora del día (0-23)\n",
@@ -525,7 +525,7 @@
     "\n",
     "    # Crear DataFrame simulado con timestamps\n",
     "   \n",
-    "    fecha_base = pd.to_datetime(\"2024-03-01\")  # Día simulado\n",
+    "    fecha_base = pd.to_datetime(fechabase)  # Día simulado\n",
     "    sim_llegadas = []\n",
     "\n",
     "    for hora, minutos in simulacion_minuto_a_minuto.items():\n",
